EXTRA_DIST =					\
	333.mat 333.lat.chk			\
	334.mat 334.lat.chk			\
	335.mat 335.lat.chk			\
	344.mat 344.lat.chk			\
	cuww1.lat.chk cuww1.mat			\
	cuww2.lat.chk cuww2.mat			\
	cuww3.lat.chk cuww3.mat			\
	cuww4.lat.chk cuww4.mat			\
	cuww5.lat.chk cuww5.mat			\
	grin.mat grin.lat.chk

check-local:
	@../check.template $(srcdir) "" src/groebner/zbasis -q 

CLEANFILES = .num_failures
