EXTRA_DIST = 						\
	333 333.mar.chk					\
	334 334.mar.chk					\
	cuww1 cuww1.bs cuww1.mar.chk cuww1.vs		\
	cuww2 cuww2.mar.chk				\
	cuww3 cuww3.A cuww3.mar.chk			\
	cuww4 cuww4.mar.chk				\
	cuww5 cuww5.mar.chk				\
	prob02 prob02.gro prob02.mar.chk		\
	prob04 prob04.gro prob04.mar.chk		\
	prob06 prob06.gro prob06.lat prob06.mar.chk	\
	prob08 prob08.gro prob08.mar.chk		\
	prob10 prob10.gro prob10.mar.chk		\
	prob12 prob12.gro prob12.mar.chk		\
	prob14 prob14.gro prob14.mar.chk		\
	prob16 prob16.gro prob16.lat prob16.mar.chk	\
	prob18 prob18.gro prob18.mar.chk		\
	prob20 prob20.mar.chk

check-local:
	@../../check.template $(srcdir) "" src/groebner/markov -q -gsaturation

CLEANFILES = .num_failures
